<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="36dp"
        android:padding="10dp">

        <ImageView
            android:id="@+id/img_poster_detail_movie"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:layout_margin="@dimen/fab_margin"
            android:contentDescription="@string/image_poster"
            android:src="@drawable/place_holder"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/txt_title_movie_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textStyle="bold"
            android:textSize="24sp"
            tools:text="Iron Man"
            app:layout_constraintTop_toBottomOf="@id/img_poster_detail_movie"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/txt_lbl_original_language_movie_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/original_language"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_title_movie_detail"/>

        <TextView
            android:id="@+id/txt_original_language_detail_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="English"
            android:textSize="18sp"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_lbl_original_language_movie_detail"/>


        <TextView
            android:id="@+id/txt_lbl_detail_rate_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/rate"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/bar_rating_chart_detail_movie"
            app:layout_constraintTop_toBottomOf="@+id/bar_rating_chart_detail_movie" />

        <TextView
            android:id="@+id/txt_vote_average_detail_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/txt_lbl_detail_rate_movie"
            app:layout_constraintTop_toBottomOf="@+id/txt_lbl_detail_rate_movie"
            tools:text="9.0" />

        <TextView
            android:id="@+id/txt_lbl_per_max_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/_10_0"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/txt_vote_average_detail_movie"
            app:layout_constraintStart_toEndOf="@+id/txt_vote_average_detail_movie" />

        <ImageView
            android:id="@+id/bar_rating_chart_detail_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.37"
            app:layout_constraintStart_toEndOf="@+id/img_poster_detail_movie"
            app:layout_constraintTop_toTopOf="@+id/img_poster_detail_movie"
            android:contentDescription="@string/image_rating" />

        <TextView
            android:id="@+id/txt_value_rate_detail_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txt_lbl_detail_rate_movie"
            app:layout_constraintStart_toEndOf="@+id/bar_rating_chart_detail_movie"
            tools:text="5" />

        <TextView
            android:id="@+id/txt_lbl_of_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/of_5"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/txt_value_rate_detail_movie"
            app:layout_constraintTop_toTopOf="@+id/txt_value_rate_detail_movie" />



        <TextView
            android:id="@+id/txt_lbl_release_date_movie_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_original_language_detail_movie"/>

        <TextView
            android:id="@+id/txt_release_date_detail_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="08 Mei 2021"
            android:textSize="18sp"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_lbl_release_date_movie_detail"/>


        <TextView
            android:id="@+id/txt_label_overview_movie_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/overview"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_release_date_detail_movie"/>

        <TextView
            android:id="@+id/txt_content_overview_detail_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textSize="18sp"
            tools:text="Ini Content Overview Film."
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_label_overview_movie_detail"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>