<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.MainFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout_Main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary_dark"
        app:tabTextColor="@android:color/white"
        app:tabIndicatorHeight="4dp"
        app:tabMode="fixed"/>


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager_Main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tabLayout_Main"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

</RelativeLayout>