...
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/img_back_drop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/place_holder"
                android:scaleType="fitXY"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/image_backdrop_path" />
...
