...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/txt_title_movie_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textStyle="bold"
            android:textSize="24sp"
            tools:text="Iron Man"
...
